# Ajastra

./: .gitignore  Ajastra.cpp  Ajastra.vcxproj  Ajastra.vcxproj.filters  Attack.cpp  Attack.h  Board.cpp  Board.h  CMakeLists.txt  Init.cpp  Init.h  MakeMove.cpp  MakeMove.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Perft.cpp  Perft.h  README.md  Validator.cpp  Validator.h  bitboard.cpp  bitboard.h  bitboardProcessor.cpp  bitboardProcessor.h  defs.h  positionkeyprocessor.cpp  positionkeyprocessor.h
Debug/: vc142.idb
Debug/Ajastra.tlog/: Ajastra.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
